tests/negative/gold/typed-assign-local2-test.gold
tests/negative/typed-assign-local2-test.toit:7:9: error: Type mismatch. Expected 'int'. Got 'string'
  param = "str"
        ^
As check failed: a string ("str") is not a int.
  0: foo                       tests/negative/typed-assign-local2-test.toit:7:9
  1: main                      tests/negative/typed-assign-local2-test.toit:10:3
